# Hi-Res-Stable-Diffusion

./: .gitignore  LICENSE  README.md  pyproject.toml
DDPM/: NoiseScheduler.py  UNet.py  UNetText.py  VAE.py  latentspace_VAE.py  run_StableDiffusion.py  run_VAE.py  run_model.py  train_StableDiffusion.py  train_VAE.py  training_ddpm.py  transform_images.py  utils.py
StableDiffusion/: app.py  inference.py  train.py  utils.py
StableDiffusion/DDPM/: run_DDPM.py  train_DDPM.py
StableDiffusion/UNet/: UNet.py  UNetText.py
StableDiffusion/VAE/: VAE.py  plot_latent_space_VAE.py  run_VAE.py  train_VAE.py
