[tool.poetry]
name = "hi-res-stable-diffusion"
version = "0.1.0"
description = ""
authors = ["david-frecon <david.frecon@epita.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.0"
torchvision = "^0.17.0"
matplotlib = "^3.8.2"
torchsummary = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
