[tool.poetry]
name = "hi-res-stable-diffusion"
version = "0.1.0"
description = ""
authors = ["david-frecon <david.frecon@epita.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5.1"
torchvision = "^0.20.1"
matplotlib = "^3.8.2"
torchsummary = "^1.5.1"
rich = "^13.7.0"
fashion-clip = "^0.2.2"
jupyter = "^1.0.0"
numpy = "^1.26.4"
transformers = "4.42.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
